objects/Rackspace_Document__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Rackspace Documents</relationshipLabel>
        <relationshipName>Rackspace_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Used in &quot;Notification on Payroll FileUpload - FileExchange&quot; workflow rule</description>
        <formula>File_Exchange__r.Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <description>Used in &quot;Notification on Payroll FileUpload - FileExchange&quot;  - Email Template</description>
        <formula>File_Exchange__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DummyEmail__c</fullName>
        <description>Used in &quot;Notification on Payroll FileUpload - FileExchange&quot; workflow rule</description>
        <label>DummyEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>It indicates when the rackspace document gets deleted.This field is used in batch apex to delete the rackspace document entry in salesforce.</description>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>File_Exchange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>File Exchange</label>
        <referenceTo>FileExchange__c</referenceTo>
        <relationshipLabel>Rackspace Documents</relationshipLabel>
        <relationshipName>Rackspace_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation</label>
        <referenceTo>Case_Investigation__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Rackspace_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Url_File_Name__c</fullName>
        <label>Url File Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Expiry_Date__c</columns>
        <columns>File_Name__c</columns>
        <columns>Url_File_Name__c</columns>
        <columns>Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>